--- a/my-app/src/components/Task.css
+++ b/my-app/src/components/Task.css
@@ -13,7 +13,7 @@
     cursor: pointer;
 }
 
-.remove-task-button {
+.remove-task-button, .see-task-datailes-button {
     background-color: #444;
     border: none;
     font-size: 24px;
